# podcast-qa

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  main.py
app/src/: constants.py
app/src/api/: client.py  models.py
data/: example_output.json  example_transcript.txt  keyword_list.joblib  keyword_list_2.joblib  summary_kmeans_with_chatgpt_and_keywords_final.csv
data/qa-outputs/: How to create an effective training program?-relevant.json  How to cure depression?-final-answer.json  How to cure depression?-final-answer.txt  How to cure depression?-non-relevant.json  How to cure depression?-relevant.json  How to increase the chance of successfully conceiving a child?-final-answer.json  How to increase the chance of successfully conceiving a child?-final-answer.txt  How to increase the chance of successfully conceiving a child?-relevant.json  How to sleep well?-final-answer.html  How to sleep well?-final-answer.json  How to sleep well?-final-answer.txt  How to sleep well?-relevant.json  Tools for creating an effective training program.-final-answer.json  Tools for creating an effective training program.-final-answer.txt  Tools for creating an effective training program.-relevant.json  Tools for increasing focus.-final-answer.json  Tools for increasing focus.-final-answer.txt  Tools for increasing focus.-relevant.json  What are the preferable day phases to expose myself to the sun and how does it affect sleep?-final-answer.txt  (+7 more)
notebooks/: 01_playlist-metadata-download.ipynb  02_video-transcript.ipynb  03_section-summaries.ipynb  04_summary-analysis.ipynb  05_qa-flow.ipynb
(+8 files in other folders)
